# dbapi-d1

./: pyproject.toml
src/dbapi_d1/: __init__.py  connection.py  cursor.py  exceptions.py
tests/: test_connection.py  test_cursor.py
