[project]
name = "dbapi-d1"
version = "0.1.0"
description = ""
authors = [
    {name = "Chad Rossouw",email = "chadrossouw7247@gmail.com"},
    {name = "Murphy Lee",email = "murphylee2004@gmail.com"},
    {name = "Shreyas Rao",email = "raoshreyas2004@gmail.com"},
    {name = "Alan Zhang",email = "zhangalan54@gmail.com"},
    {name = "Daniel Alyoshin",email = "daniel.alyoshin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry]
packages = [{include = "dbapi_d1", from = "src"}]

[tool.poetry.dependencies]
requests = ">=2.32.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
